actrying to fix a couple issues on mobile

--- a/sandbox_math/static/css/project.css
+++ b/sandbox_math/static/css/project.css
@@ -67,7 +67,7 @@
 }
 
 #sidebar-nav {
-  width: 400px;
+  width: 300px;
 }
 
 .no-mistake-popover {
